2010-04-19  Greg Clayton  (gclayton@apple.com)

	* arm-macosx-thread-status.h (struct gdb_arm_thread_vfpv1_state):
	Added padding so we don't miss FPSCR on armv6.

2010-04-01  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-inferior.c (macosx_get_thread_name): If the thread
	has no name set (from pthread_setname_np), check to see if libdispatch
	has a queue name for this thread in case it is a GCD worker thread;
	use that name if so.
	* macosx-nat-infthread.c (get_dispatch_queue_name): Change linkage from
	static to external.
	* macosx-nat-infthread.h (get_dispatch_queue_name): Prototype added.

2010-03-25  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-dyld.c (macosx_dyld_update): Call 
	objc_init_runtime_version().
	* macosx-nat-dyld-process.c (dyld_symfile_loaded_hook): Ditto.

2010-03-25  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-infthread.c (get_dispatch_queue_addr): New function to get
	the dispatch queue structure address to help identify different
	dispatch queues.
	(macosx_print_thread_details): Report the dispatch workqueue struct
	address in the MI output.

2010-03-23  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-mutils.c (macosx_task_valid): Remove debug printf.

2010-03-22  Jason Molenda  (jmolenda@apple.com)

	* macosx-nat-mutils.c (macosx_task_valid): Add a temporary debug
	printf so we can track down what's happening on a remote system.

2010-03-17  Jim Ingham  <jingham@apple.com>

	* remote-kdp.c (kdp_reboot_command): Change the command so that it only 
	will reboot an already connected machine (but at least it will do 
	that...)
	* kdp-transactions.c (kdp_hostreboot): Assume that we are disconnected 
	after we send the hostreboot packet.
	
2010-03-03  Jim Ingham  <jingham@apple.com>

	* macosx-nat-utils.c (macosx_load_dylib): Setup debugger mode before 
	calling value_string - since that too will call into the target.
	
2010-03-03  Jason Molenda  (jmolenda@apple.com)
